--- a/assets/linker/templates/views/partials/partial1.ejs
+++ b/assets/linker/templates/views/partials/partial1.ejs
@@ -1,4 +1,4 @@
 
 <h1>{{height}} cm</h1>
 <h1>{{weight}} kg</h1>
-<h1>BMI = {{weight / height * height | number}} kg</h1>
+<h1>BMI = {{bmi | number:1}}</h1>
